apps/harbor/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-sre
  namespace: sre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-sre
  template:
    metadata:
      labels:
        app: laravel-sre
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: app
        image: harbor.okfe.net/matahariku/laravel-sre:v1
        imagePullPolicy: Always  # Force pull
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-sre
  namespace: sre
spec:
  selector:
    app: laravel-sre
  ports:
  - port: 80
    targetPort: 80
